--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,45 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+# --- secrets & local config ---
+.env
+*.env
+!.env.example
+
+# App config: keep real config out of git, commit only the example
+config.yaml
+config.local.yaml
+secrets.*
+*.secret.*
+
+# --- Python (safe defaults; keep/remove as needed) ---
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.so
+.mypy_cache/
+.pytest_cache/
+.ipynb_checkpoints/
+.venv/
+venv/
+.envrc
+
+# --- builds / packaging ---
+build/
+dist/
+.eggs/
+*.egg-info/
+
+# --- logs & caches ---
+logs/
+*.log
+.cache/
+
+# --- OS / editor noise ---
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
