--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,6 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[project.scripts]
+quantgpt = "quantgpt.__main__:run"
